gcc/testsuite/gdc.test/fail_compilation/issue22826.d
/* TEST_OUTPUT:
---
fail_compilation/issue22826.d(6): Error: found `3` when expecting new line following `#line` directive
---
*/
#line 12 "issue22826.d" 3
